--- a/plugins/weather.json5
+++ b/plugins/weather.json5
@@ -2,7 +2,7 @@
     "meta":{
         "kind": 5003,
         "name": "Weather",
-        "description": "Get current weather",
+        "description": "Get current weather for a city or area",
         "tos": "https://openagents.com/terms",
         "privacy": "https://openagents.com/privacy",
         "author": "yuzurushX",
