Add translate plugin

--- a/index.json5
+++ b/index.json5
@@ -2,6 +2,7 @@
 "plugins/feed-reader.json5",
 "plugins/web-screenshot.json5",
 "plugins/zip-code.json5",
+"plugins/translate.json5",
 "plugins/fact-checker.json5",
 "plugins/crypto-price.json5",
 "plugins/weather.json5",
