--- a/plugins/nostr-kv-read.json5
+++ b/plugins/nostr-kv-read.json5
@@ -2,7 +2,7 @@
     "meta":{
         "kind": 5003,
         "name": "Nostr KV - Read",
-        "description": "Read a key-value pair stored by someone else",
+        "description": "Read a value from the shared memory",
         "tos": "https://openagents.com/terms",
         "privacy": "https://openagents.com/privacy",
         "author": "riccardobl",
