--- a/plugins/nostr-kv-write.json5
+++ b/plugins/nostr-kv-write.json5
@@ -2,7 +2,7 @@
     "meta":{
         "kind": 5003,
         "name": "Nostr KV - Write",
-        "description": "Write a key-value pair for someone else to read",
+        "description": "Store a value in the shared memory",
         "tos": "https://openagents.com/terms",
         "privacy": "https://openagents.com/privacy",
         "author": "riccardobl",
