--- a/plugins/fact-checker.json5
+++ b/plugins/fact-checker.json5
@@ -10,7 +10,8 @@
         "picture": "",
         "tags": [
             "tool"
-        ]
+        ],
+        "payment":"lightning:svemir@stacker.news"
     },
     // Simplified template for plugins, see feed-reader.json5 for an example using a full template
     "mini-template":{
