--- a/plugins/weather.json5
+++ b/plugins/weather.json5
@@ -10,7 +10,9 @@
         "picture": "",
         "tags": [
             "tool"
-        ]
+        ],
+        "payment":"lightning:YuzuRush@stacker.news"
+
     },
     // Simplified template for plugins, see feed-reader.json5 for an example using a full template
     "mini-template":{
